--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -17,7 +17,7 @@
         <a class="nav-link" routerLink="/listadoE">Empleados</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Recibos de Sueldo</a>
+        <a class="nav-link" routerLink="/listadoR">Recibos de Sueldo</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Reportes</a>
