--- a/front/src/app/empleado/alta/alta.component.html
+++ b/front/src/app/empleado/alta/alta.component.html
@@ -4,7 +4,7 @@
     <form [formGroup]="formulario">
       <div class="mb-3">
         <label class="form-label">Legajo</label>
-        <input type="text" class="form-control" formControlName="legajo" />
+        <input type="number" class="form-control" formControlName="legajo" />
         <small
           class="text-danger"
           *ngIf="
