--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -20,7 +20,7 @@
         <a class="nav-link" routerLink="/listadoR">Recibos de Sueldo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Reportes</a>
+        <a class="nav-link" routerLink="/reportes">Reportes</a>
       </li>
     </ul>
   </div>
