--- a/front/src/app/recibo/listado/listado.component.html
+++ b/front/src/app/recibo/listado/listado.component.html
@@ -1,13 +1,13 @@
-<div class="container">
+<div class="container col-12">
   <div class="container"><h1>LISTADO DE RECIBOS POR EMPLEADO</h1></div>
-  <div class="container">
-    <div class="row">
+  <div class="container col-12">
+    <div class="row col-12">
       <button class="btn btn-dark col-1 mb-3" (click)="nuevo()">NUEVO</button>
     </div>
-    <div class="row">
+    <div class="row col-12">
       <input
         type="number"
-        class="form-control col-1 mb-3"
+        class="form-control col-4 mb-3"
         [(ngModel)]="legajo"
       />
       <button class="btn btn-dark col-2 mb-3" (click)="consultar()">
